# Thanatos

./: .gitignore  GEMINI.md  build.gradle.kts  package_magisk.sh  settings.gradle.kts  项目实现.md
app/: build.gradle.kts
app/src/androidTest/java/io/github/jark006/thanatos/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/io/github/jark006/thanatos/: MainActivity.kt
app/src/main/java/io/github/jark006/thanatos/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/io/github/jark006/thanatos/: ExampleUnitTest.kt
daemon/: CMakeLists.txt
daemon/cpp/src/: grpc_server.cpp  grpc_server.h  kernel_interface.cpp  kernel_interface.h  main.cpp  shell_interface.cpp  shell_interface.h  test_client.cpp  timer_manager.cpp  timer_manager.h
daemon/rust/: Cargo.toml  build.rs
daemon/rust/src/: config_manager.rs  event_logger.rs  execution_manager.rs  ffi.rs  lib.rs  logic_controller.rs  ml_collector.rs
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
ipc/proto/: thanatos.proto
magisk/: customize.sh  module.prop  sepolicy.rule  service.sh
