# 文件路径: /Thanatos/daemon/rust/Cargo.toml

[package]
name = "thanatos_logic"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"] # 我们要编译成一个静态库给 C++ 链接

[dependencies]
# FFI 桥接
cxx = "1.0"

# 数据库
rusqlite = { version = "0.31.0", features = ["bundled"] }

# 异步运行时和工具 (暂时先不引入，保持简单)
# tokio = { version = "1", features = ["full"] }

# 其他工具库
log = "0.4"
env_logger = "0.11"
dashmap = "5.5.3" # 高性能并发 HashMap

[build-dependencies]
cxx-build = "1.0" # cxx 的构建脚本依赖